--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
       href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -58,72 +65,113 @@
           </p>
         </div>
         <br /><br />
-        <form
-          action="info"
-          method="post"
-          class="d-sm-flex justify-content-center"
-        >
-          <div
-            id="a1"
-            class="d-sm-flex justify-content-center w-50 m-5 p-4 border border-0"
+        <div class="d-flex justify-content-center">
+          <form
+            action="info"
+            method="post"
+            class="d-sm-flex justify-content-center"
           >
-            <div class="row">
-              <div class="col">
-                <input
-                  class="form-control form-control-sm"
-                  type="text"
-                  id="yourname"
-                  name="abc"
-                  placeholder="your name"
-                  required
-                />
-              </div>
-              <div class="col">
-                <select
-                  class="form-select-sm"
-                  name="gender1"
-                  id="gender1"
-                  required
-                >
-                  <option id="seg" value="select gender">select gender</option>
-                  <option value="male">male</option>
-                  <option value="female">female</option></select
-                ><br /><br />
-              </div>
+            <div
+              id="a1"
+              class="d-sm-flex justify-content-center w-50 m-5 p-4 border border-0"
+            >
               <div class="row">
                 <div class="col">
                   <input
                     class="form-control form-control-sm"
                     type="text"
-                    id="partnername"
-                    name="abcd"
-                    placeholder="partner's name"
+                    id="yourname"
+                    name="abc"
+                    placeholder="your name"
                     required
                   />
                 </div>
                 <div class="col">
-                  <select class="form-select-sm" name="gender2" id="gender2">
-                    <option value="select gender">select gender</option>
+                  <select
+                    class="form-select-sm"
+                    name="gender1"
+                    id="gender1"
+                    required
+                  >
+                    <option id="seg" value="select gender">
+                      select gender
+                    </option>
                     <option value="male">male</option>
-                    <option value="female">female</option>
-                  </select>
+                    <option value="female">female</option></select
+                  ><br /><br />
                 </div>
-                <br /><br />
-              </div>
-              <div class="row">
-                <div class="col m-auto">
-                  <input
-                    type="submit"
-                    id="calc"
-                    class="btn btn-outline-danger"
-                    value="Calculate"
-                  />
+                <div class="row">
+                  <div class="col">
+                    <input
+                      class="form-control form-control-sm"
+                      type="text"
+                      id="partnername"
+                      name="abcd"
+                      placeholder="partner's name"
+                      required
+                    />
+                  </div>
+                  <div class="col">
+                    <select class="form-select-sm" name="gender2" id="gender2">
+                      <option value="select gender">select gender</option>
+                      <option value="male">male</option>
+                      <option value="female">female</option>
+                    </select>
+                  </div>
+                  <br /><br />
+                </div>
+                <div class="d-flex justify-content-center">
+                  <div class="row">
+                    <div class="col m-auto">
+                      <input
+                        type="submit"
+                        id="calc"
+                        class="btn btn-outline-danger"
+                        value="Calculate"
+                      />
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
+    </div>
+    <div class="d-flex justify-content-center flex-column align-items-center">
+      <h4 class="mb-4">Follow us</h4>
+      <ul>
+        <li>
+          <span class="social-icon social-whatsapp" id="wh"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-google" id="google"
+            ><i class="fa-brands fa-google"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-snapchat" id="snap"
+            ><i class="fa-brands fa-snapchat"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-instagram" id="insta"
+            ><i class="fa-brands fa-instagram"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-github" id="git"
+            ><i class="fa-brands fa-github"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-telegram" id="tele"
+            ><i class="fa-brands fa-telegram"></i
+          ></span>
+        </li>
+      </ul>
     </div>
     <script src="/homepage.js"></script>
   </body>
