--- a/public/sec_page.html
+++ b/public/sec_page.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>love calculator</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +22,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Dancing+Script&family=Pacifico&display=swap"
       rel="stylesheet"
     />
 
@@ -26,10 +34,54 @@
     <link rel="stylesheet" href="sec_page.css" />
   </head>
   <body>
-    <div class="display-5" id="res">
-      <p>love match between</p>
-      <p id="per"></p>
-      <p id="phar"></p>
+    <div class="container-fluid" id="res">
+      <p class="d-flex justify-content-center display-3" id="h">
+        LOVE MATCH BETWEEN
+      </p>
+      <br />
+      <p id="per" class="d-flex justify-content-center h1"></p>
+      <br />
+      <p id="phar" class="d-flex justify-content-center display-6"></p>
+      <br />
+      <p id="ph" class="d-flex justify-content-center display-6"></p>
+    </div>
+
+    <div
+      class="d-flex justify-content-center flex-column align-items-center fixed-bottom"
+    >
+      <h4 class="mb-4">Follow us</h4>
+      <ul>
+        <li>
+          <span class="social-icon social-whatsapp" id="wh"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-google" id="google"
+            ><i class="fa-brands fa-google"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-snapchat" id="snap"
+            ><i class="fa-brands fa-snapchat"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-instagram" id="insta"
+            ><i class="fa-brands fa-instagram"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-github" id="git"
+            ><i class="fa-brands fa-github"></i
+          ></span>
+        </li>
+        <li>
+          <span class="social-icon social-telegram" id="tele"
+            ><i class="fa-brands fa-telegram"></i
+          ></span>
+        </li>
+      </ul>
     </div>
     <script src="/sec_page.js"></script>
   </body>
